Được tạo bằng Colaboratory

--- a/Project_CS221.ipynb
+++ b/Project_CS221.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMRmt2VjakxOUTKtqIE3+sZ",
+      "authorship_tag": "ABX9TyP3GaQtk2XoXOZsljTdWVpf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,20 +97,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Kuie3GIc_SM4",
-        "outputId": "c7df629c-ae72-4d81-fc55-0dc2df476d4d"
+        "outputId": "c67782af-fab7-4579-c823-5249705e12ee"
       },
-      "execution_count": 16,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'CS221-Project'...\n",
-            "remote: Enumerating objects: 20, done.\u001b[K\n",
-            "remote: Counting objects:   5% (1/20)\u001b[K\rremote: Counting objects:  10% (2/20)\u001b[K\rremote: Counting objects:  15% (3/20)\u001b[K\rremote: Counting objects:  20% (4/20)\u001b[K\rremote: Counting objects:  25% (5/20)\u001b[K\rremote: Counting objects:  30% (6/20)\u001b[K\rremote: Counting objects:  35% (7/20)\u001b[K\rremote: Counting objects:  40% (8/20)\u001b[K\rremote: Counting objects:  45% (9/20)\u001b[K\rremote: Counting objects:  50% (10/20)\u001b[K\rremote: Counting objects:  55% (11/20)\u001b[K\rremote: Counting objects:  60% (12/20)\u001b[K\rremote: Counting objects:  65% (13/20)\u001b[K\rremote: Counting objects:  70% (14/20)\u001b[K\rremote: Counting objects:  75% (15/20)\u001b[K\rremote: Counting objects:  80% (16/20)\u001b[K\rremote: Counting objects:  85% (17/20)\u001b[K\rremote: Counting objects:  90% (18/20)\u001b[K\rremote: Counting objects:  95% (19/20)\u001b[K\rremote: Counting objects: 100% (20/20)\u001b[K\rremote: Counting objects: 100% (20/20), done.\u001b[K\n",
-            "remote: Compressing objects:   7% (1/13)\u001b[K\rremote: Compressing objects:  15% (2/13)\u001b[K\rremote: Compressing objects:  23% (3/13)\u001b[K\rremote: Compressing objects:  30% (4/13)\u001b[K\rremote: Compressing objects:  38% (5/13)\u001b[K\rremote: Compressing objects:  46% (6/13)\u001b[K\rremote: Compressing objects:  53% (7/13)\u001b[K\rremote: Compressing objects:  61% (8/13)\u001b[K\rremote: Compressing objects:  69% (9/13)\u001b[K\rremote: Compressing objects:  76% (10/13)\u001b[K\rremote: Compressing objects:  84% (11/13)\u001b[K\rremote: Compressing objects:  92% (12/13)\u001b[K\rremote: Compressing objects: 100% (13/13)\u001b[K\rremote: Compressing objects: 100% (13/13), done.\u001b[K\n",
-            "Unpacking objects:   5% (1/20)   \rUnpacking objects:  10% (2/20)   \rUnpacking objects:  15% (3/20)   \rUnpacking objects:  20% (4/20)   \rUnpacking objects:  25% (5/20)   \rUnpacking objects:  30% (6/20)   \rUnpacking objects:  35% (7/20)   \rUnpacking objects:  40% (8/20)   \rUnpacking objects:  45% (9/20)   \rUnpacking objects:  50% (10/20)   \rUnpacking objects:  55% (11/20)   \rUnpacking objects:  60% (12/20)   \rUnpacking objects:  65% (13/20)   \rUnpacking objects:  70% (14/20)   \rUnpacking objects:  75% (15/20)   \rremote: Total 20 (delta 5), reused 17 (delta 5), pack-reused 0\u001b[K\n",
-            "Unpacking objects:  80% (16/20)   \rUnpacking objects:  85% (17/20)   \rUnpacking objects:  90% (18/20)   \rUnpacking objects:  95% (19/20)   \rUnpacking objects: 100% (20/20)   \rUnpacking objects: 100% (20/20), done.\n"
+            "fatal: destination path 'CS221-Project' already exists and is not an empty directory.\n"
           ]
         }
       ]
@@ -125,9 +120,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EHhmQszo_4pq",
-        "outputId": "e61042d2-406c-4340-d7ce-6f6ded3a67da"
+        "outputId": "67c90144-1be6-46bd-b910-774d6b9cc4de"
       },
-      "execution_count": 27,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,7 +143,7 @@
       "metadata": {
         "id": "n0I_31s6_fiC"
       },
-      "execution_count": 28,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -162,9 +157,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4hhf42w8Af22",
-        "outputId": "a4126f75-015a-4bbf-da69-ddba5918260c"
+        "outputId": "62b6b861-2957-4f0a-baed-8707607497e2"
       },
-      "execution_count": 21,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,7 +177,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 7
         }
       ]
     },
@@ -199,9 +194,9 @@
           "height": 70
         },
         "id": "um-asjVSA_lv",
-        "outputId": "f790db5f-5ed3-428b-eb66-cd6b0114d3c4"
+        "outputId": "a4e94686-c0ec-4bb3-9a8b-a59538249ca5"
       },
-      "execution_count": 29,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -221,7 +216,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 8
         }
       ]
     },
@@ -238,9 +233,9 @@
           "height": 53
         },
         "id": "8KW8xQuvBBqJ",
-        "outputId": "1ff10ab6-6769-4979-89b3-63566ec268b3"
+        "outputId": "0a217a72-a9ff-49cf-bacb-a68d619f7fc2"
       },
-      "execution_count": 30,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -260,7 +255,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 9
         }
       ]
     },
@@ -301,7 +296,7 @@
       "metadata": {
         "id": "c3Mx--iZBKAC"
       },
-      "execution_count": 31,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -316,7 +311,7 @@
       "metadata": {
         "id": "Mf2Ni0kzBL1T"
       },
-      "execution_count": 32,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -362,7 +357,7 @@
       "metadata": {
         "id": "mAxn1ZqWBM3V"
       },
-      "execution_count": 34,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -377,9 +372,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WE_Ukk8gCFmZ",
-        "outputId": "921a4fef-831d-484c-a558-3b8bba671046"
+        "outputId": "58fac670-21b3-45b9-cdd2-65b95db2bd14"
       },
-      "execution_count": 36,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -389,7 +384,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 13
         }
       ]
     },
@@ -411,9 +406,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ETTEN7c-COmL",
-        "outputId": "63632930-6138-41af-da32-2c8490919619"
+        "outputId": "5d206155-b57a-4c93-fb92-2709ea1f5dd2"
       },
-      "execution_count": 38,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -425,7 +420,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 14
         }
       ]
     },
@@ -443,9 +438,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wNEL_ISVCcUg",
-        "outputId": "1824f393-f82b-43a3-8e26-94fd42bc9b7f"
+        "outputId": "97fbb3ac-aef9-47b5-b500-0b20aac17b65"
       },
-      "execution_count": 39,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -486,28 +481,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Dtb6NRXCDif-",
-        "outputId": "b6ca5b21-201d-4b0b-b2e9-7614ba15afd7"
+        "outputId": "303276c7-8da8-4478-e0e6-ec1d3c032f56"
       },
-      "execution_count": 40,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting py-vncorenlp\n",
-            "  Downloading py_vncorenlp-0.1.3.tar.gz (3.9 kB)\n",
-            "Collecting pyjnius\n",
-            "  Downloading pyjnius-1.4.2-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.3 MB)\n",
-            "\u001b[K     |████████████████████████████████| 1.3 MB 5.3 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: six>=1.7.0 in /usr/local/lib/python3.7/dist-packages (from pyjnius->py-vncorenlp) (1.15.0)\n",
-            "Building wheels for collected packages: py-vncorenlp\n",
-            "  Building wheel for py-vncorenlp (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for py-vncorenlp: filename=py_vncorenlp-0.1.3-py3-none-any.whl size=4307 sha256=45d5733f0d7df96eb0576a2f7a019b3e51c28b1797b251715b9184873c347e6a\n",
-            "  Stored in directory: /root/.cache/pip/wheels/87/be/55/d5930c1d90a09832e9afd57a9e13801e3d16c88f5a19f777ae\n",
-            "Successfully built py-vncorenlp\n",
-            "Installing collected packages: pyjnius, py-vncorenlp\n",
-            "Successfully installed py-vncorenlp-0.1.3 pyjnius-1.4.2\n"
+            "Requirement already satisfied: py-vncorenlp in /usr/local/lib/python3.7/dist-packages (0.1.3)\n",
+            "Requirement already satisfied: pyjnius in /usr/local/lib/python3.7/dist-packages (from py-vncorenlp) (1.4.2)\n",
+            "Requirement already satisfied: six>=1.7.0 in /usr/local/lib/python3.7/dist-packages (from pyjnius->py-vncorenlp) (1.15.0)\n"
           ]
         }
       ]
@@ -522,133 +507,93 @@
       "metadata": {
         "id": "KvcGOcU3Dl_0"
       },
-      "execution_count": 41,
+      "execution_count": 17,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "model.annotate_text(sentences[0])"
+        "def vncore_tokenize(sentence):\n",
+        "  vncore_sentences = model.annotate_text(sentence)\n",
+        "  sent = vncore_sentences[0]\n",
+        "  word_list = []\n",
+        "  for word in sent:\n",
+        "    word_list.append(word[\"wordForm\"])\n",
+        "  return word_list"
+      ],
+      "metadata": {
+        "id": "RGaxWpGXUdhc"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vncore_tokenize(\"Số lượng từ ghép khi tách từ bằng thuật toán Longest Matching\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "07NiCmq3j4p2",
+        "outputId": "658d074f-6ae1-43ec-9706-f0c3b93b51c3"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Số_lượng',\n",
+              " 'từ',\n",
+              " 'ghép',\n",
+              " 'khi',\n",
+              " 'tách',\n",
+              " 'từ',\n",
+              " 'bằng',\n",
+              " 'thuật_toán',\n",
+              " 'Longest_Matching']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open('CS221-Project/tokenize/vncore_tokenss.txt', 'w', encoding='utf-8') as f:\n",
+        "    vncore_sentences = []\n",
+        "    for sentence in sentences:\n",
+        "        word_list = vncore_tokenize(sentence)\n",
+        "        vncore_sentences.append(' '.join(word_list))\n",
+        "        for word in word_list: f.write(word + '\\n')\n",
+        "        if sentence != sentences[-1]: f.write('\\n')\n",
+        "    f.write('\\n')\n",
+        "vncore_sentences[0:3]"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "sHNHMyhOEE2y",
-        "outputId": "2c2420ee-8ac6-4f0c-981f-2a10d4cdedfa"
+        "outputId": "60690748-0673-45eb-9fc0-02f97721f755"
       },
-      "execution_count": 42,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{0: [{'index': 1,\n",
-              "   'wordForm': 'Pha',\n",
-              "   'posTag': 'N',\n",
-              "   'nerLabel': 'O',\n",
-              "   'head': 5,\n",
-              "   'depLabel': 'sub'},\n",
-              "  {'index': 2,\n",
-              "   'wordForm': 'lập_công',\n",
-              "   'posTag': 'V',\n",
-              "   'nerLabel': 'O',\n",
-              "   'head': 1,\n",
-              "   'depLabel': 'nmod'},\n",
-              "  {'index': 3,\n",
-              "   'wordForm': 'trên',\n",
-              "   'posTag': 'N',\n",
-              "   'nerLabel': 'O',\n",
-              "   'head': 1,\n",
-              "   'depLabel': 'nmod'},\n",
-              "  {'index': 4,\n",
-              "   'wordForm': 'đã',\n",
-              "   'posTag': 'R',\n",
-              "   'nerLabel': 'O',\n",
-              "   'head': 5,\n",
-              "   'depLabel': 'adv'},\n",
-              "  {'index': 5,\n",
-              "   'wordForm': 'giúp',\n",
-              "   'posTag': 'V',\n",
-              "   'nerLabel': 'O',\n",
-              "   'head': 0,\n",
-              "   'depLabel': 'root'},\n",
-              "  {'index': 6,\n",
-              "   'wordForm': 'Rashford',\n",
-              "   'posTag': 'Np',\n",
-              "   'nerLabel': 'B-PER',\n",
-              "   'head': 5,\n",
-              "   'depLabel': 'dob'},\n",
-              "  {'index': 7,\n",
-              "   'wordForm': 'giải',\n",
-              "   'posTag': 'V',\n",
-              "   'nerLabel': 'O',\n",
-              "   'head': 5,\n",
-              "   'depLabel': 'vmod'},\n",
-              "  {'index': 8,\n",
-              "   'wordForm': 'hạn',\n",
-              "   'posTag': 'N',\n",
-              "   'nerLabel': 'O',\n",
-              "   'head': 7,\n",
-              "   'depLabel': 'dob'},\n",
-              "  {'index': 9,\n",
-              "   'wordForm': 'bàn',\n",
-              "   'posTag': 'N',\n",
-              "   'nerLabel': 'O',\n",
-              "   'head': 8,\n",
-              "   'depLabel': 'nmod'},\n",
-              "  {'index': 10,\n",
-              "   'wordForm': 'thắng',\n",
-              "   'posTag': 'V',\n",
-              "   'nerLabel': 'O',\n",
-              "   'head': 8,\n",
-              "   'depLabel': 'nmod'},\n",
-              "  {'index': 11,\n",
-              "   'wordForm': 'tại',\n",
-              "   'posTag': 'E',\n",
-              "   'nerLabel': 'O',\n",
-              "   'head': 8,\n",
-              "   'depLabel': 'loc'},\n",
-              "  {'index': 12,\n",
-              "   'wordForm': 'sân',\n",
-              "   'posTag': 'N',\n",
-              "   'nerLabel': 'O',\n",
-              "   'head': 11,\n",
-              "   'depLabel': 'pob'},\n",
-              "  {'index': 13,\n",
-              "   'wordForm': 'Old_Trafford',\n",
-              "   'posTag': 'Np',\n",
-              "   'nerLabel': 'O',\n",
-              "   'head': 12,\n",
-              "   'depLabel': 'nmod'},\n",
-              "  {'index': 14,\n",
-              "   'wordForm': 'kéo_dài',\n",
-              "   'posTag': 'V',\n",
-              "   'nerLabel': 'O',\n",
-              "   'head': 5,\n",
-              "   'depLabel': 'dob'},\n",
-              "  {'index': 15,\n",
-              "   'wordForm': '845',\n",
-              "   'posTag': 'M',\n",
-              "   'nerLabel': 'O',\n",
-              "   'head': 16,\n",
-              "   'depLabel': 'det'},\n",
-              "  {'index': 16,\n",
-              "   'wordForm': 'phút',\n",
-              "   'posTag': 'Nu',\n",
-              "   'nerLabel': 'O',\n",
-              "   'head': 14,\n",
-              "   'depLabel': 'dob'},\n",
-              "  {'index': 17,\n",
-              "   'wordForm': '.',\n",
-              "   'posTag': 'CH',\n",
-              "   'nerLabel': 'O',\n",
-              "   'head': 5,\n",
-              "   'depLabel': 'punct'}]}"
+              "['Pha lập_công trên đã giúp Rashford giải hạn bàn thắng tại sân Old_Trafford kéo_dài 845 phút .',\n",
+              " 'Với 3 điểm có được trong trận đấu này , Quỷ đỏ đã leo lên vị_trí thứ 2 trên bảng xếp_hạng Premier_League với 30 điểm , chỉ kém đội đầu_bảng Liverpool 2 điểm .',\n",
+              " 'Tổng_thống đắc_cử Joe_Biden được cho đang cân_nhắc việc cắt bỏ chương_trình hiện_đại_hoá hạt_nhân trị_giá 1.000 tỷ USD do chính_quyền Tổng_thống đương_nhiệm Donald_Trump đề_xuất .']"
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 31
         }
       ]
     }
